test/invalid/baseline/iterable-notype.txt
Syntax error at line 2 in iterable-notype.webidl, since `interface X`:
    iterable;
            ^ Missing less-than sign `<` in iterable declaration
